--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,11 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 URL: https://github.com/lemuelemos/ComparadorFundosBack
 BugReports: https://github.com/lemuelemos/ComparadorFundosBack/issues
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Imports: 
+    dplyr,
+    pool,
+    readr,
+    RPostgres
